server.log
INFO:     Will watch for changes in these directories: ['/Users/al1an/Documents/Advanture/backend/adventure']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [12744] using WatchFiles
INFO:     Started server process [12760]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     127.0.0.1:54271 - "GET /api/v1/health HTTP/1.1" 200 OK
INFO:     127.0.0.1:54277 - "GET /api/v1/parse HTTP/1.1" 405 Method Not Allowed
INFO:     127.0.0.1:54277 - "GET /favicon.ico HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:54272 - "POST /api/v1/parse HTTP/1.1" 200 OK
INFO:     127.0.0.1:54278 - "GET /docs HTTP/1.1" 200 OK
INFO:     127.0.0.1:54322 - "GET /openapi.json HTTP/1.1" 200 OK
INFO:     127.0.0.1:54355 - "POST /api/v1/parse HTTP/1.1" 500 Internal Server Error
INFO:     127.0.0.1:54398 - "POST /api/v1/parse HTTP/1.1" 500 Internal Server Error
WARNING:  WatchFiles detected changes in 'app/services/llm/client.py', 'app/schemas/response.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [12760]
INFO:     Started server process [13065]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     127.0.0.1:54466 - "GET /docs HTTP/1.1" 200 OK
INFO:     127.0.0.1:54466 - "GET /openapi.json HTTP/1.1" 200 OK
INFO:     127.0.0.1:54688 - "GET /docs HTTP/1.1" 200 OK
INFO:     127.0.0.1:54688 - "GET /openapi.json HTTP/1.1" 200 OK
INFO:     127.0.0.1:54689 - "POST /api/v1/parse HTTP/1.1" 500 Internal Server Error
INFO:     127.0.0.1:54689 - "POST /api/v1/parse HTTP/1.1" 500 Internal Server Error
WARNING:  WatchFiles detected changes in 'app/services/llm/client.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [13065]
INFO:     Started server process [13234]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  WatchFiles detected changes in 'app/validators/schema_validator.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [13234]
Process SpawnProcess-4:
Traceback (most recent call last):
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py", line 315, in _bootstrap
    self.run()
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/al1an/Documents/Advanture/backend/adventure/.venv/lib/python3.9/site-packages/uvicorn/_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
  File "/Users/al1an/Documents/Advanture/backend/adventure/.venv/lib/python3.9/site-packages/uvicorn/server.py", line 61, in run
    return asyncio.run(self.serve(sockets=sockets))
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/asyncio/runners.py", line 44, in run
    return loop.run_until_complete(main)
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Users/al1an/Documents/Advanture/backend/adventure/.venv/lib/python3.9/site-packages/uvicorn/server.py", line 68, in serve
    config.load()
  File "/Users/al1an/Documents/Advanture/backend/adventure/.venv/lib/python3.9/site-packages/uvicorn/config.py", line 467, in load
    self.loaded_app = import_from_string(self.app)
  File "/Users/al1an/Documents/Advanture/backend/adventure/.venv/lib/python3.9/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/main.py", line 11, in <module>
    from app.api.routes import router
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/api/__init__.py", line 5, in <module>
    from app.api.routes import router
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/api/routes.py", line 9, in <module>
    from app.services.nlp_service import NLPService
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/services/__init__.py", line 5, in <module>
    from app.services.nlp_service import NLPService
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/services/nlp_service.py", line 14, in <module>
    from app.validators.schema_validator import validate_parsed_intent
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/validators/__init__.py", line 5, in <module>
    from app.validators.schema_validator import validate_parsed_intent
  File "/Users/al1an/Documents/Advanture/backend/adventure/app/validators/schema_validator.py", line 43
    price_level = data.get("price_level")                                                                     ▼ Modified Files
                                                                                                              ^
SyntaxError: invalid character '▼' (U+25BC)
WARNING:  WatchFiles detected changes in 'app/validators/schema_validator.py'. Reloading...
INFO:     Started server process [13283]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  WatchFiles detected changes in 'app/validators/schema_validator.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [13283]
INFO:     Started server process [13325]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     127.0.0.1:54771 - "POST /api/v1/parse HTTP/1.1" 200 OK
INFO:     127.0.0.1:54792 - "GET /docs HTTP/1.1" 200 OK
INFO:     127.0.0.1:54792 - "GET /openapi.json HTTP/1.1" 200 OK
INFO:     127.0.0.1:54793 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
INFO:     127.0.0.1:54806 - "POST /api/v1/parse HTTP/1.1" 422 Unprocessable Entity
WARNING:  WatchFiles detected changes in 'app/validators/schema_validator.py', 'app/services/llm/client.py', 'app/schemas/response.py', 'app/api/routes.py', 'app/main.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [13325]
INFO:     Started server process [16118]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
